2011-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add new example of untar to load initial contents of IMFS.
	* crc/.cvsignore, crc/LICENSE, crc/Makefile, crc/README, crc/crc.h,
	crc/crc_32.c, crc/init.c, crc/sniptype.h, crc/rootfs/image.img: New
	files.

2010-04-12	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* fdopen/test.c: Add include of unistd.h for close().

2010-04-09	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* filerdback/test.c: Add CVS Id.

2010-04-09	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* filerdback/test.c: Add include of unistd.h

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, Makefile, fdopen/.cvsignore, fdopen/Makefile,
	fdopen/README, fdopen/test.c, filerdback/.cvsignore,
	filerdback/Makefile, filerdback/README, filerdback/test.c,
	repeated_opens/.cvsignore, repeated_opens/Makefile,
	repeated_opens/README, repeated_opens/test.c: New files.
