@@ -1,0 +1,4 @@
+o-optimize
+FilesystemImage
+FilesystemImage.c
+FilesystemImage.h
